Modificacion del estilo

--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -27,7 +27,7 @@ body {
 th{
     min-width: 30px;
     color: whitesmoke;
-    background-color: #9a1616;
+    background-color: #81DEB9;
 }
 
 .datepicker th{
