--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -11,7 +11,42 @@ and open the template in the editor.
 
 
 body {
-    padding-top: 80px;
+    // padding-top: 80px;
+    background-color: lightgrey;
+}
+
+#app {
+    position: absolute;
+    top: 2%;
+    left: 47%;
+}
+
+#intro {
+    position: relative;
+    background: url(../../images/fotoIntro.jpg) no-repeat center center;
+    webkit-background-size: cover;
+    moz-background-size: cover;
+    o-background-size: cover;
+    background-size: cover;
+    color: #fff;
+    padding: 370px 0 200px 0;
+    box-shadow: 0px 10px 10px #888888;
+}
+
+#intro > h1 {
+    display: block;
+    position: relative;
+    top: -2em;
+    text-align: center;
+    letter-spacing: 1px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 500%;
+    font-weight: 100;
+}
+
+#intro > h1 > span {
+    font-size: 30%;
+    color: lightgrey;
 }
 
 .jumbotron {
