Añadido el menu con el framework metro ui. Se ha borrado el fichero animate. Se ha cambiado el bootstrap. Se han cambiado los iconos.

--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -11,11 +11,11 @@ and open the template in the editor.
 
 
 body {
-    background-color: lightgrey;
+    background-color: #white;
 }
 
 .margen-superior {
-    margin-top: 80px;
+    margin-top: 80px !important;
 }
 
 /* Navbar */
@@ -45,6 +45,7 @@ body {
     text-align: center;
     letter-spacing: 1px;
     font-family: 'Roboto', sans-serif;
+    color: #fff !important;
     font-size: 500%;
     font-weight: 100;
 }
