--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 
 
 body {
-    background-color: #white;
+    background-color: lightgrey;
 }
 
 .margen-superior {
