--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -28,13 +28,13 @@ body {
 /* Intro de la pagina de inicio */
 #intro {
     position: relative;
-    background: url(../../images/fotoIntro.jpg) no-repeat center center;
+    //background: url(../../images/portada.jpg) no-repeat center center;
     webkit-background-size: cover;
     moz-background-size: cover;
     o-background-size: cover;
     background-size: cover;
-    color: #fff;
-    padding: 370px 0 200px 0;
+    color: #000;
+    padding: 270px 0 0 0;
     box-shadow: 0px 10px 10px #888888;
 }
 
@@ -45,14 +45,14 @@ body {
     text-align: center;
     letter-spacing: 1px;
     font-family: 'Roboto', sans-serif;
-    color: #fff !important;
+    color: #000 !important;
     font-size: 500%;
     font-weight: 100;
 }
 
 #intro > h1 > span {
     font-size: 30%;
-    color: lightgrey;
+    color: black !important;
 }
 
 /*.jumbotron {
@@ -89,4 +89,55 @@ th{
 
 body {
     background-color: white;
+}
+
+.modal-dialog {}
+
+.thumbnail {margin-bottom:6px;}
+
+.carousel-control.left,.carousel-control.right{
+    background-image:none;
+    margin-top:10%;
+    width:5%;
+}
+
+.bordered {
+    border: solid #366FCE 2px;
+    margin-top: 30px;
+}
+
+.bordered:hover {
+    border: solid #2B58A4 2px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+.centered > a:nth-child(even){
+    margin-left: 20px;
+}
+
+.centered {
+    margin-left: 13%;
+    margin-top: 50px;
+}
+
+.bordered{
+    position: relative;
+    background-color: #3D7CE5;
+    height: 150px;
+    border-radius: 10px;
+}
+
+.bordered >  p {
+    position: relative;
+    top: 100px;
+    left: -15px;
+    background-color: white;
+    border-top: 2px solid black;
+    width: 427px;
+    height: 46px;
+    border-radius: 0 0 10px 10px;
+    text-align: center;
+    padding-top: 3px;
+    font-size: 1.6em;
 }
