--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 
 
 body {
-    background-color: lightgrey;
+    background-color: rgb(214, 221, 233);
 }
 
 .margen-superior {
@@ -63,14 +63,14 @@ body {
 
 /* Cabecera de las tablas */
 .panel-default>.panel-heading {
-    background-color:#60a917;
+    background-color:#428bca;
     color:whitesmoke;
 }
 
 th{
     min-width: 30px;
     color: whitesmoke;
-    background-color: #12C955;
+    background-color: #176185;
 }
 
 .datepicker th{
@@ -87,9 +87,6 @@ th{
     color: white;
 }
 
-body {
-    background-color: white;
-}
 
 .modal-dialog {}
 
@@ -140,4 +137,8 @@ body {
     text-align: center;
     padding-top: 3px;
     font-size: 1.6em;
+}
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
+    background-color: #3C759B;
 }
