--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -14,7 +14,7 @@ body {
     background-color: rgb(214, 221, 233);
 }
 
-.margen-superior {
+.margen-superior, #contenidoParseado {
     margin-top: 80px !important;
 }
 
@@ -155,4 +155,8 @@ th{
 
 .card .card-title {
     font-size: 14px !important;
+}
+
+.modal-backdrop {
+    display: none !important;
 }
