--- a/src/main/webapp/css/skin/main.css
+++ b/src/main/webapp/css/skin/main.css
@@ -174,6 +174,10 @@ th{
     height: 433px !important;
 }
 
+.waves-block > .img-list {
+    height: 300px !important;
+}
+
 .bs-example-modal-lg{
     width: 950px !important;
     background-color: black;
